# edgar

./: README.md  pyproject.toml
src/edgar/: __init__.py  __main__.py  cli.py  constants.py  endpoint.py  map_tickers.py  parse.py
src/edgar/mappings/: cik_to_ticker_json.json  cik_to_ticker_txt.json  ticker_to_cik_json.json  ticker_to_cik_txt.json
